[package]
name = "gw2-stats"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"]}
reqwest = { verson = "0.11", features = ["blocking", "json"]}
serde = { version = "1.0", features = ["derive"]}
postgres = { version = "0.19.4" }
